Begin implementing Shadow Steel tools and voiding effect. Currently no special behavior defined for block-breaking

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -65,7 +65,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis lacinia magn
     modId="tetra"
     mandatory=true
     versionRange="[3.8.0,)"
-    ordering="NONE"
+    ordering="AFTER"
     side="BOTH"
 
 [[dependencies.tetrapak]]
