--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     implementation fg.deobf("curse.maven:create-328085:3167531")
     runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
     runtimeOnly fg.deobf("curse.maven:openloader-354339:3198395")
+    runtimeOnly fg.deobf("curse.maven:neat-238372:3182258")
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
