--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
 public net.minecraft.loot.conditions.LootConditionManager func_237475_a_(Ljava/lang/String;Lnet/minecraft/loot/ILootSerializer;)Lnet/minecraft/loot/LootConditionType; #register
+public net.minecraft.entity.item.FallingBlockEntity field_175132_d #fallTile
