--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.loot.conditions.LootConditionManager func_237475_a_(Ljava/lang/String;Lnet/minecraft/loot/ILootSerializer;)Lnet/minecraft/loot/LootConditionType; #register
 public net.minecraft.entity.item.FallingBlockEntity field_175132_d #fallTile
+public net.minecraft.world.biome.BiomeManager field_226833_b_ #seed
