--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ buildscript {
         classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
     }
 }
+
+plugins {
+    id'com.github.gmazzo.buildconfig' version '3.0.1'
+}
+
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
@@ -25,11 +30,14 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven {
+        url 'https://jitpack.io/'
+    }
 }
 
-version = '0.2.2'
-group = 'mod.noobulus.tetrapak' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'tetrapak'
+version = "${minecraft_version}-${mod_version}"
+group = "mod.noobulus.${modid}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "${modid}"
 
 // java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
@@ -85,7 +93,7 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.1.32'
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
     implementation fg.deobf("curse.maven:tetra-289712:3371803")
     implementation fg.deobf("curse.maven:mgui-351914:3291267")
@@ -102,14 +110,14 @@ compileJava.options.encoding = 'UTF-8'
 jar {
     manifest {
         attributes([
-            "Specification-Title": "tetrapak",
+            "Specification-Title": "${modid}",
             "Specification-Vendor": "Noobulus",
             "Specification-Version": "0.1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"Noobulus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            "MixinConfigs": "tetrapak.mixins.json"
+            "MixinConfigs": "${modid}.mixins.json"
         ])
     }
 }
@@ -117,7 +125,7 @@ jar {
 jar.finalizedBy('reobfJar')
 
 mixin {
-    add sourceSets.main, "tetrapak.refmap.json"
+    add sourceSets.main, "${modid}.refmap.json"
 }
 
 publishing {
@@ -131,4 +139,37 @@ publishing {
             url "file:///${project.projectDir}/mcmodsrepo"
         }
     }
+}
+
+def getGitHash = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--short', 'HEAD'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+def hasUnstaged = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'status', '--porcelain'
+        standardOutput = stdout
+    }
+    def result = stdout.toString().replaceAll("M gradlew", "").trim()
+    if (!result.isEmpty())
+        println("Found stageable results:\n${result}\n")
+    return !result.isEmpty()
+}
+
+buildConfig {
+    buildConfigField 'String', 'MODID', "\"${modid}\""
+    buildConfigField 'String', 'VERSION', "\"${project.version}\""
+    buildConfigField 'String', 'MODID', "\"${modid}\""
+    def gitstage = "\"${getGitHash()}" + (hasUnstaged() ? "-modified" : "") + "\""
+    println("Using git stage ${gitstage}")
+    buildConfigField "String", "GITHASH", gitstage
+
+    version = project.version
+    packageName = project.group
 }
