--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mod_version=0.2.2
+minecraft_version=1.16.5
+forge_version=36.1.32
+modid=tetrapak
