--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
     runtimeOnly fg.deobf("curse.maven:openloader-354339:3199872")
     runtimeOnly fg.deobf("curse.maven:neat-238372:3182258")
+    runtimeOnly fg.deobf("curse.maven:quark-243121:3366626")
+    runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3326041")
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
