--- a/build.gradle
+++ b/build.gradle
@@ -173,18 +173,35 @@ def hasUnstaged = { ->
     return !result.isEmpty()
 }
 
-def hasGit = { ->
-    def result = exec{
+def hasCommandInstalled = { cmd ->
+    def stdout = new ByteArrayOutputStream()
+    def stderr = new ByteArrayOutputStream()
+    return exec{
         ignoreExitValue = true
+        standardOutput = stdout
+        errorOutput = stderr
+        commandLine "where", cmd
+    }.getExitValue()==0 && stdout.toString().trim().contains(cmd)
+}
+
+def getGitInfo = { ->
+    if (!hasCommandInstalled("git")) {
+        println("No git install found in PATH")
+        return "NOGIT"
+    }
+    def stdout = new ByteArrayOutputStream()
+    exec{
+        standardOutput = stdout
         commandLine "git", "--version"
     }
-    return result.getExitValue()==0
+    println(stdout.toString().trim())
+    return "${getGitHash()}" + (hasUnstaged() ? "-modified" : "")
 }
 
 buildConfig {
     buildConfigField 'String', 'MODID', "\"${modid}\""
     buildConfigField 'String', 'VERSION', "\"${project.version}\""
-    def gitstage = hasGit() ? ("\"${getGitHash()}" + (hasUnstaged() ? "-modified" : "") + "\"") : "NOGIT"
+    def gitstage = getGitInfo()
     println("Using git stage ${gitstage}")
     buildConfigField "String", "GITHASH", gitstage
 
