--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,8 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Test the command command
+        run: command -v git
       - name: Build with Gradle
         run: ./gradlew build
       - uses: actions/upload-artifact@v2
