--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:neat-238372:3182258")
     runtimeOnly fg.deobf("curse.maven:quark-243121:3366626")
     runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3326041")
+    runtimeOnly fg.deobf("curse.maven:eidolon-429625:3157832")
+    runtimeOnly fg.deobf("curse.maven:curios-309927:3343065")
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
