--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,14 @@ apply plugin: 'maven-publish'
 apply plugin: 'idea'
 apply plugin: 'org.spongepowered.mixin'
 
-// cursemaven needs to be down here for some reason
+
 repositories {
+    maven {
+        // Location of the maven that hosts JEI files (and TiC)
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
+
     maven {
         url "https://www.cursemaven.com"
         content {
@@ -116,6 +122,9 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3326041")
     runtimeOnly fg.deobf("curse.maven:eidolon-429625:3157832")
     runtimeOnly fg.deobf("curse.maven:curios-309927:3343065")
+
+    compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
