--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=0.3
+mod_version=0.3.1
 minecraft_version=1.16.5
 forge_version=36.1.32
 modid=tetrapak
+
+jei_version = 7.7.1.111
