--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
         mavenCentral()
-        maven { url='https://dist.creeper.host/Sponge/maven' }
-        maven {url='https://repo.spongepowered.org/maven'}
+        maven { url = 'https://dist.creeper.host/Sponge/maven' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
@@ -14,7 +14,7 @@ buildscript {
 }
 
 plugins {
-    id'com.github.gmazzo.buildconfig' version '3.0.1'
+    id 'com.github.gmazzo.buildconfig' version '3.0.1'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -123,8 +123,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:eidolon-429625:3157832")
     runtimeOnly fg.deobf("curse.maven:curios-309927:3343065")
 
-    compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
+    // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
+    implementation fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
 
     annotationProcessor 'org.spongepowered:mixin:0.8:processor'
 }
@@ -134,14 +134,14 @@ compileJava.options.encoding = 'UTF-8'
 jar {
     manifest {
         attributes([
-            "Specification-Title": "${modid}",
-            "Specification-Vendor": "Noobulus",
-            "Specification-Version": "0.1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"Noobulus",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            "MixinConfigs": "${modid}.mixins.json"
+                "Specification-Title"     : "${modid}",
+                "Specification-Vendor"    : "Noobulus",
+                "Specification-Version"   : "0.1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "Noobulus",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "${modid}.mixins.json"
         ])
     }
 }
@@ -191,12 +191,12 @@ def hasCommandInstalled = { cmd ->
         return true
     def stdout = new ByteArrayOutputStream()
     def stderr = new ByteArrayOutputStream()
-    return exec{
+    return exec {
         ignoreExitValue = true
         standardOutput = stdout
         errorOutput = stderr
         commandLine "where", cmd
-    }.getExitValue()==0 && stdout.toString().trim().contains(cmd)
+    }.getExitValue() == 0 && stdout.toString().trim().contains(cmd)
 }
 
 def getGitInfo = { ->
@@ -205,7 +205,7 @@ def getGitInfo = { ->
         return "NOGIT"
     }
     def stdout = new ByteArrayOutputStream()
-    exec{
+    exec {
         standardOutput = stdout
         commandLine "git", "--version"
     }
