--- a/build.gradle
+++ b/build.gradle
@@ -126,6 +126,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:abnormals_core-382216:3457851")
     runtimeOnly fg.deobf("curse.maven:autumnity-365045:3295700")
     runtimeOnly fg.deobf("curse.maven:upgrade_aquatic-326895:3249419")
+    runtimeOnly fg.deobf("curse.maven:endergetic_expansion-291509:3154938")
 
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
     implementation fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
