--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("curse.maven:tetra-289712:3456516")
+    implementation fg.deobf("curse.maven:tetra-289712:3468014")
     implementation fg.deobf("curse.maven:mgui-351914:3456505")
     // implementation fg.deobf("curse.maven:create-328085:3419412")
     // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
@@ -127,6 +127,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:autumnity-365045:3295700")
     runtimeOnly fg.deobf("curse.maven:upgrade_aquatic-326895:3249419")
     runtimeOnly fg.deobf("curse.maven:endergetic_expansion-291509:3154938")
+    runtimeOnly fg.deobf("curse.maven:forbidden_and_arcanus-309858:3135631")
 
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
     implementation fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
