Remap class names, update version numbers of things

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ version = "${minecraft_version}-${mod_version}"
 group = "mod.noobulus.${modid}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "${modid}"
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
+java.toolchain.languageVersion = JavaLanguageVersion.of(17) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
@@ -111,10 +111,11 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("curse.maven:tetra-289712:3506628")
-    implementation fg.deobf("curse.maven:mgui-351914:3456505")
+    implementation fg.deobf("curse.maven:tetra-289712:3573132")
+    implementation fg.deobf("curse.maven:mutil-351914:3573121")
     // implementation fg.deobf("curse.maven:create-328085:3419412")
     // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
+    /*
     runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
     runtimeOnly fg.deobf("curse.maven:openloader-354339:3199872")
     runtimeOnly fg.deobf("curse.maven:neat-238372:3182258")
@@ -129,11 +130,12 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:endergetic_expansion-291509:3154938")
     runtimeOnly fg.deobf("curse.maven:betterend_reforked-537247:3507856")
     runtimeOnly fg.deobf("curse.maven:infernal_expansion-395078:3487698")
+     */
 
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
-    implementation fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
+    implementation fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
 
-    implementation fg.deobf("com.jozufozu.flywheel:Flywheel:${flywheel_version}")
+    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${flywheel_version}")
     implementation fg.deobf("com.simibubi.create:Create:${create_version}")
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
