--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=0.3.3
-minecraft_version=1.16.5
-forge_version=36.2.0
+minecraft_version=1.18.1
+forge_version=39.0.6
 modid=tetrapak
-jei_version=7.7.1.116
-flywheel_version=1.16-0.2.3.44
-create_version=mc1.16.5_v0.3.2d+419
+jei_version=9.1.1.48
+flywheel_version=1.18-0.4.2-rc.25
+create_version=mc1.18.1_v0.4a+31
