--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -36,7 +36,7 @@ ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.tetrapak]]
-modId = "mgui"
+modId = "mutil"
 mandatory = true
 versionRange = "[3.1.3,)"
 ordering = "AFTER"
