--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ mod_version=0.3.3
 minecraft_version=1.18.1
 forge_version=39.0.6
 modid=tetrapak
-jei_version=9.1.1.48
-flywheel_version=1.18-0.4.2-rc.25
-create_version=mc1.18.1_v0.4a+31
+jei_version=9.1.2.50
+flywheel_version=1.18-0.5.0a.37
+create_version=mc1.18.1_v0.4b+47
