--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ minecraft_version=1.18.1
 forge_version=39.0.6
 modid=tetrapak
 jei_version=9.1.2.50
-flywheel_version=1.18-0.5.0a.37
-create_version=mc1.18.1_v0.4b+47
+flywheel_version=1.18-0.6.0.49
+create_version=mc1.18.1_v0.4c+71
