Update everything on 1.16

--- a/build.gradle
+++ b/build.gradle
@@ -111,24 +111,26 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("curse.maven:tetra-289712:3506628")
+    implementation fg.deobf("curse.maven:tetra-289712:3585032")
     implementation fg.deobf("curse.maven:mgui-351914:3456505")
     // implementation fg.deobf("curse.maven:create-328085:3419412")
     // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
-    runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
-    runtimeOnly fg.deobf("curse.maven:openloader-354339:3199872")
+    runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3507029")
+    runtimeOnly fg.deobf("curse.maven:openloader-354339:3343809")
     runtimeOnly fg.deobf("curse.maven:neat-238372:3182258")
-    runtimeOnly fg.deobf("curse.maven:quark-243121:3394265")
+    runtimeOnly fg.deobf("curse.maven:quark-243121:3538744")
     runtimeOnly fg.deobf("curse.maven:quarkoddities-301051:3088871")
     runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3326041")
     runtimeOnly fg.deobf("curse.maven:eidolon-429625:3157832")
-    runtimeOnly fg.deobf("curse.maven:curios-309927:3343065")
-    runtimeOnly fg.deobf("curse.maven:abnormals_core-382216:3457851")
-    runtimeOnly fg.deobf("curse.maven:autumnity-365045:3295700")
-    runtimeOnly fg.deobf("curse.maven:upgrade_aquatic-326895:3249419")
+    runtimeOnly fg.deobf("curse.maven:curios-309927:3613039")
+    runtimeOnly fg.deobf("curse.maven:abnormals_core-382216:3607198")
+    runtimeOnly fg.deobf("curse.maven:autumnity-365045:3553317")
+    runtimeOnly fg.deobf("curse.maven:upgrade_aquatic-326895:3561148")
     runtimeOnly fg.deobf("curse.maven:endergetic_expansion-291509:3154938")
-    runtimeOnly fg.deobf("curse.maven:betterend_reforked-537247:3507856")
-    runtimeOnly fg.deobf("curse.maven:infernal_expansion-395078:3487698")
+    runtimeOnly fg.deobf("curse.maven:betterend_reforked-537247:3523090")
+    runtimeOnly fg.deobf("curse.maven:infernal_expansion-395078:3526021")
+    runtimeOnly fg.deobf("curse.maven:botania-225643:3608755")
+    runtimeOnly fg.deobf("curse.maven:patchouli-306770:3459118")
 
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
     implementation fg.deobf("mezz.jei:jei-1.16.5:${jei_version}")
