--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ mod_version=0.3.3
 minecraft_version=1.16.5
 forge_version=36.2.0
 modid=tetrapak
-jei_version=7.7.1.116
-flywheel_version=1.16-0.2.3.44
-create_version=mc1.16.5_v0.3.2d+419
+jei_version=7.7.1.145
+flywheel_version=1.16-0.2.5.53
+create_version=mc1.16.5_v0.3.2g+480
