Implement EXP Boost, Voiding statbar buster

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=0.3.3
 minecraft_version=1.18.1
-forge_version=39.0.6
+forge_version=39.0.75
 modid=tetrapak
-jei_version=9.1.2.50
-flywheel_version=1.18-0.6.0.49
-create_version=mc1.18.1_v0.4c+71
+jei_version=9.2.1.69
+flywheel_version=1.18-0.6.1.60
+create_version=mc1.18.1_v0.4d+81
