--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,5 @@ modid=tetrapak
 jei_version=9.2.1.69
 flywheel_version=1.18-0.6.1.60
 create_version=mc1.18.1_v0.4d+81
+mutil_version=1.18.1-4.5.0-pre.1
+tetra_version=1.18.1-4.7.0-pre.4
