Add Quark woods and prep for release

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=0.4.0
 minecraft_version=1.18.1
-forge_version=39.0.79
+forge_version=39.1.2
 modid=tetrapak
-jei_version=9.4.1.102
+jei_version=9.4.1.112
 flywheel_version=1.18-0.6.1.62
-create_version=mc1.18.1_v0.4d+86
+create_version=mc1.18.1_v0.4f+100
 mutil_version=1.18.1-4.5.0-pre.1
-tetra_version=1.18.1-4.7.0
+tetra_version=1.18.1-4.8.1
