--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,8 @@ dependencies {
     // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
     implementation fg.deobf("curse.maven:supplementaries-412082:3717652")
     implementation fg.deobf("curse.maven:selene-499980:3668969")
+    implementation fg.deobf("curse.maven:alexsmobs-426558:3709855")
+    implementation fg.deobf("curse.maven:citadel-331936:3642713")
 
     //runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
     runtimeOnly fg.deobf("curse.maven:openloader-354339:3618465")
