--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=0.4.4
-minecraft_version=1.18.1
-forge_version=39.1.2
+mod_version=0.4.5
+minecraft_version=1.18.2
+forge_version=40.1.25
 modid=tetrapak
-jei_version=9.4.1.112
-flywheel_version=1.18-0.6.1.62
-create_version=mc1.18.1_v0.4f+100
-mutil_version=1.18.1-4.5.0-pre.1
-tetra_version=1.18.1-4.8.1
+jei_version=9.7.0.195
+flywheel_version=1.18-0.7.0.78
+create_version=mc1.18.2_v0.4.1+122
+mutil_version=1.18.2-4.5.0
+tetra_version=1.18.2-4.9.0
