--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
-
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
@@ -23,6 +21,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'idea'
 apply plugin: 'org.spongepowered.mixin'
+apply from: 'https://gist.githubusercontent.com/LordGrimmauld/66f552c0d0bd50763098e92aa22a51df/raw/a4eb350252bdb76a570de110f55b4de19ac92ded/modconfig.gradle'
+
 
 
 repositories {
@@ -121,8 +121,8 @@ dependencies {
     // implementation fg.deobf("curse.maven:harvests-571339:3640648") borked in dev?
     // implementation fg.deobf("curse.maven:create-328085:3419412")
     // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
-    implementation fg.deobf("curse.maven:supplementaries-412082:3800501")
-    implementation fg.deobf("curse.maven:selene-499980:3802427")
+    implementation fg.deobf("curse.maven:supplementaries-412082:3826125")
+    implementation fg.deobf("curse.maven:selene-499980:3826120")
     implementation fg.deobf("curse.maven:alexsmobs-426558:3785938")
     implementation fg.deobf("curse.maven:citadel-331936:3783096")
 
@@ -190,54 +190,6 @@ publishing {
             url "file:///${project.projectDir}/mcmodsrepo"
         }
     }
-}
-
-def getGitHash = { ->
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine 'git', 'rev-parse', '--short', 'HEAD'
-        standardOutput = stdout
-    }
-    return stdout.toString().trim()
-}
-
-def hasUnstaged = { ->
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine 'git', 'status', '--porcelain'
-        standardOutput = stdout
-    }
-    def result = stdout.toString().replaceAll("M gradlew", "").trim()
-    if (!result.isEmpty())
-        println("Found stageable results:\n${result}\n")
-    return !result.isEmpty()
-}
-
-def hasCommandInstalled = { cmd ->
-    if (!DefaultNativePlatform.currentOperatingSystem.isWindows())
-        return true
-    def stdout = new ByteArrayOutputStream()
-    def stderr = new ByteArrayOutputStream()
-    return exec {
-        ignoreExitValue = true
-        standardOutput = stdout
-        errorOutput = stderr
-        commandLine "where", cmd
-    }.getExitValue() == 0 && stdout.toString().trim().contains(cmd)
-}
-
-def getGitInfo = { ->
-    if (!hasCommandInstalled("git")) {
-        println("No git install found in PATH")
-        return "NOGIT"
-    }
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        standardOutput = stdout
-        commandLine "git", "--version"
-    }
-    println(stdout.toString().trim())
-    return "${getGitHash()}" + (hasUnstaged() ? "-modified" : "")
 }
 
 buildConfig {
