--- a/build.gradle
+++ b/build.gradle
@@ -119,8 +119,8 @@ dependencies {
     // implementation fg.deobf("curse.maven:tetra-289712:3640654")
     // implementation fg.deobf("curse.maven:mutil-351914:3640643")
     // implementation fg.deobf("curse.maven:harvests-571339:3640648") borked in dev?
-    // implementation fg.deobf("curse.maven:create-328085:3419412")
-    // implementation fg.deobf("curse.maven:flywheel-486392:3419392")
+    implementation fg.deobf("curse.maven:create-328085:3737418")
+    implementation fg.deobf("curse.maven:flywheel-486392:3737402")
     implementation fg.deobf("curse.maven:supplementaries-412082:3826125")
     implementation fg.deobf("curse.maven:selene-499980:3826120")
 
@@ -145,8 +145,8 @@ dependencies {
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
     implementation fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
 
-    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${flywheel_version}")
-    implementation fg.deobf("com.simibubi.create:Create:${create_version}")
+    // implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${flywheel_version}")
+    // implementation fg.deobf("com.simibubi.create:Create:${create_version}")
 
     implementation fg.deobf("se.mickelus.mutil:mutil:${mutil_version}")
     implementation fg.deobf("se.mickelus.tetra:tetra:${tetra_version}")
