--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=0.5.2
+mod_version=0.5.3
 minecraft_version=1.18.2
-forge_version=40.1.54
+forge_version=40.1.73
 modid=tetrapak
-jei_version=9.5.5.174
-flywheel_version=1.18-0.7.0.70
-create_version=mc1.18.2_v0.4.1+125
+jei_version=9.7.1.232
+flywheel_version=1.18-0.6.4.87
+create_version=mc1.18.2_v0.5.0c+146
 mutil_version=1.18.2-4.5.0
 tetra_version=1.18.2-4.9.3
