--- a/build.gradle
+++ b/build.gradle
@@ -119,8 +119,8 @@ dependencies {
     // implementation fg.deobf("curse.maven:tetra-289712:3640654")
     // implementation fg.deobf("curse.maven:mutil-351914:3640643")
     // implementation fg.deobf("curse.maven:harvests-571339:3640648") borked in dev?
-    implementation fg.deobf("curse.maven:create-328085:3934676")
-    implementation fg.deobf("curse.maven:flywheel-486392:3934664")
+    // implementation fg.deobf("curse.maven:create-328085:3934676")
+    // implementation fg.deobf("curse.maven:flywheel-486392:3934664")
     implementation fg.deobf("curse.maven:supplementaries-412082:3871187")
     implementation fg.deobf("curse.maven:selene-499980:3842421")
 
@@ -145,8 +145,9 @@ dependencies {
     // compileOnly fg.deobf("mezz.jei:jei-1.16.5:${jei_version}:api")
     implementation fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
 
-    // implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:${flywheel_version}")
-    // implementation fg.deobf("com.simibubi.create:Create:${create_version}")
+    implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:all") { transitive = false }
+    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
+    compileOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
 
     implementation fg.deobf("se.mickelus.mutil:mutil:${mutil_version}")
     implementation fg.deobf("se.mickelus.tetra:tetra:${tetra_version}")
