--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,8 @@ minecraft_version=1.18.2
 forge_version=40.1.73
 modid=tetrapak
 jei_version=9.7.1.232
-flywheel_version=1.18-0.6.4.87
-create_version=mc1.18.2_v0.5.0c+146
+create_version = 0.5.0.d-168
+flywheel_version = 0.6.5-91
+registrate_version = MC1.18.2-1.1.3
 mutil_version=1.18.2-4.5.0
 tetra_version=1.18.2-4.9.3
