--- a/build.gradle
+++ b/build.gradle
@@ -121,8 +121,8 @@ dependencies {
     // implementation fg.deobf("curse.maven:harvests-571339:3640648") borked in dev?
     // implementation fg.deobf("curse.maven:create-328085:3934676")
     // implementation fg.deobf("curse.maven:flywheel-486392:3934664")
-    implementation fg.deobf("curse.maven:supplementaries-412082:3871187")
-    implementation fg.deobf("curse.maven:selene-499980:3842421")
+    implementation fg.deobf("curse.maven:supplementaries-412082:4065749")
+    implementation fg.deobf("curse.maven:moonlightlib-499980:3842421")
 
     //runtimeOnly fg.deobf("curse.maven:druidcraft-340991:3177267")
     runtimeOnly fg.deobf("curse.maven:openloader-354339:3697234")
@@ -130,7 +130,13 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:quark-243121:3840125")
     runtimeOnly fg.deobf("curse.maven:quarkoddities-301051:3575623")
     runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3642382")
-    runtimeOnly fg.deobf("curse.maven:farmersdelight-398521:3834150")
+    runtimeOnly fg.deobf("curse.maven:farmersdelight-398521:3999153")
+    runtimeOnly fg.deobf("curse.maven:thermalexpansion-69163:4101926")
+    runtimeOnly fg.deobf("curse.maven:thermalfoundation-222880:4102233")
+    runtimeOnly fg.deobf("curse.maven:thermalcultivation-271835:4101925")
+    runtimeOnly fg.deobf("curse.maven:thermalinnovation-291737:4101928")
+    runtimeOnly fg.deobf("curse.maven:thermalintegration-626708:4101930")
+    runtimeOnly fg.deobf("curse.maven:cofhcore-69162:4112120")
     /*
     runtimeOnly fg.deobf("curse.maven:eidolon-429625:3157832")
     runtimeOnly fg.deobf("curse.maven:curios-309927:3343065")
