--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=0.5.3
+mod_version=0.6.0
 minecraft_version=1.18.2
-forge_version=40.1.73
+forge_version=40.1.85
 modid=tetrapak
-jei_version=9.7.1.232
-create_version = 0.5.0.d-168
-flywheel_version = 0.6.5-91
+jei_version=9.7.1.255
+create_version = 0.5.0.g-209
+flywheel_version = 0.6.8-96
 registrate_version = MC1.18.2-1.1.3
 mutil_version=1.18.2-4.5.0
-tetra_version=1.18.2-4.9.3
+tetra_version=1.18.2-4.9.4
